First stable release of this widget with following changes: - Added a method `add` to add view and set pagers and backdrop effects. - Added a method `remove` to remove view either by passing view or index. - Added a proper Demo app.

--- a/Demo App/widgets/in.prashant.scrollableViews/views/widget.xml
+++ b/Demo App/widgets/in.prashant.scrollableViews/views/widget.xml
@@ -8,9 +8,8 @@
 
         <ScrollView id="scrollView">
             <View id="pagerContainer">
-                <View id="PAGING_VIEW">
-                    <!-- <View class="radio-views left-padding"></View> -->
-                </View>
+                <View id="PAGING_VIEW"> </View>
+                
                 <View id="pagerControl"></View>
             </View>
         </ScrollView>
