--- a/in.prashant.scrollableViews/views/widget.xml
+++ b/in.prashant.scrollableViews/views/widget.xml
@@ -8,9 +8,8 @@
 
         <ScrollView id="scrollView">
             <View id="pagerContainer">
-                <View id="PAGING_VIEW">
-                    <!-- <View class="radio-views left-padding"></View> -->
-                </View>
+                <View id="PAGING_VIEW"> </View>
+                
                 <View id="pagerControl"></View>
             </View>
         </ScrollView>
